# Pneumonia-Detection

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
config/: config.py
data/: augmentation.py  dataset.py  dicom_utils.py  preprocessing.py
docs/: PACKAGE_MANAGEMENT.md
evaluation/: evaluator.py
inference/: predictor.py
models/: base_model.py  model_builder.py  vgg16_model.py
scripts/: create_sample_data.py  evaluate.py  predict.py  train.py
tests/: conftest.py  test_model.py  test_preprocesing.py
training/: trainer.py
